igw.tf
# Creating Internet Gateway 
resource "aws_internet_gateway" "IGW-TF" { 
 vpc_id = "vpc-0e971a2c2041b0474" 
}
